fix error on ej2